--- a/amanda.css
+++ b/amanda.css
@@ -25,8 +25,8 @@
     box-shadow: 0 4px 16px rgba(255, 105, 180, 0.2);
     transition: transform 0.2s;
     background-color: #ffffff;
-    color: #daa520;
-    border: 1px solid #daa520;
+    color: #000000;
+    border: 1px solid #000000;
     text-decoration: none;
 }
 
@@ -46,7 +46,7 @@
 
 .display-5,
 .fw-bold {
-    color: #daa520;
+    color: #000000;
 }
 
 .text-uppercase {
@@ -137,10 +137,10 @@
     display: inline-flex;
     align-items: center;
     text-decoration: none;
-    color: #daa520;
+    color: #000000;
     font-size: 1.5rem;
     font-weight: bold;
-    border: 1px solid #daa520;
+    border: 1px solid #000000;
     border-radius: 50px;
     padding: 16px 32px;
     box-shadow: 0 4px 16px rgba(163, 214, 24, 0.2);
